--- a/orderer-ca/templates/pvc.yaml
+++ b/orderer-ca/templates/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: common-pvc
-  namespace: hyperledger
+  name: {{.Values.pvc.name}}
+  namespace: {{.Values.namespace}}
 spec:
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: 5Gi
+      storage: {{.Values.pvc.storage}}
   storageClassName: efs-sc
