--- a/ca/templates/pvc.yaml
+++ b/ca/templates/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{.Values.pvc.name}}
+  name: common-pvc
   namespace: {{.Values.namespace}}
 spec:
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: {{.Values.pvc.storage}}
+      storage: 5Gi
   storageClassName: efs-sc
