--- a/orderer/Chart.yaml
+++ b/orderer/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: ca
-description: A Helm chart of Hyerpedger Fabric CA for Kubernetes
+name: orderer
+description: A Helm chart of Hyerpedger Fabric orderer for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
