--- a/ca/templates/secret.yaml
+++ b/ca/templates/secret.yaml
@@ -7,5 +7,5 @@ metadata:
   namespace: {{ .Values.namespace }}
 type: Opaque
 data:
-  POSTGRES_USER: {{ .Values.db.username }}
-  POSTGRES_PASSWORD: {{ .Values.db.password }}
+  POSTGRES_USER: ZG9jdHJhY2U=
+  POSTGRES_PASSWORD: RG9jdHJhY2VAMTIz
