--- a/ca/templates/pvc.yaml
+++ b/ca/templates/pvc.yaml
@@ -21,7 +21,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: gp2
+  storageClassName: efs-sc
   resources:
     requests:
       storage: 5Gi
