UPDATE: fabric-tools chart added

--- a/fabric-tools/templates/pod.yaml
+++ b/fabric-tools/templates/pod.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Pod
 metadata:
   name: {{ .Values.name }}-{{ .Values.org }}
   namespace: {{ .Values.namespace }}
